fixed loading roller overlapping issues with nav

--- a/src/App.css
+++ b/src/App.css
@@ -168,6 +168,7 @@ nav {
   position: fixed;
   left: 0;
   right: 0;
+  z-index: 30;
 }
 
 .logoContainer {
